--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "clean": "rimraf dist",
     "build": "yarn clean && tsc",
     "lint": "eslint --ext .ts --cache src tests",
-    "prepare": "yarn lint && yarn test && yarn build",
     "test": "jest --no-cache --color --config .jestrc.json",
     "test:integration": "yarn test ./tests/integration",
     "test:unit": "yarn test ./tests/unit",
@@ -40,7 +39,7 @@
     "@avaly/eslint-plugin-import-order": "^2.0.0",
     "@types/express": "^4.17.11",
     "@types/isomorphic-form-data": "^2.0.0",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^29.5.3",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
@@ -53,12 +52,12 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.2",
-    "jest": "^27.0.0-next.2",
+    "jest": "^29.6.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.0-next.6",
+    "ts-jest": "^29.1.1",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.9.5"
   },
   "keywords": [
     "graphql",
